Avoid overflow

--- a/src/frontend/homepage/app/styles/main.scss
+++ b/src/frontend/homepage/app/styles/main.scss
@@ -214,10 +214,6 @@ body {
 
 /** Larger Screens - desktops and tablets **/
 @include wide {
-  body {
-    overflow-y: scroll;
-  }
-
   .menu {
     display: none;
   }
